--- a/seo1.html
+++ b/seo1.html
@@ -8,39 +8,44 @@
 
     <h1>HTML tags for SEOM</h1>
     <a href="https://www.link-assistant.com/news/html-meta-tags-for-seo.html">SEO를 위한 7 HTML tags</a>
-    <ol> head section
-        <li>title</li>
+
+    <ol>
+      <h2>&lt;Head&gt; section</h2>
+        <li>title tag.</li>
+        <p>
+
+        </p>
+
+        <li>meta description tag.</li>
         <p>
           <code>
-        	&lt;meta name="description" content="Your gorgeous description"&gt;
+          &lt;meta name="description" content="Your gorgeous description"&gt;
           </code>
         </p>
 
-                <li>meta description</li>
-                <p>내용 2</p>
+        <li>open graph tag.</li>
+        <p>내용 2</p>
 
-                <li>2</li>
-                <p>내용 2</p>
+        <li>robots tag.</li>
+        <p>내용 2</p>
 
-                <li>2</li>
-                <p>내용 2</p>
-
-                <li>2</li>
-                <p>내용 2</p>
+        <li>canonical tag.</li>
+        <p>내용 2</p>
 
 
-            </ol>
+    </ol>
 
-            <ol> body section
-                <li></li>
-                <p>내용 1</p>
-                <li>2</li>
-                <p>내용 2</p>
+    <ol>
+      <h2> &lt;body&gt; section</h2>
+        <li>header tags.</li>
+        <p>내용 1</p>
+        <li>alt attribute.</li>
+        <p>내용 2</p>
 
 
-            </ol>
+    </ol>
 
 
 
-          </body>
+  </body>
 </html>
