--- a/index.html
+++ b/index.html
@@ -1,33 +1,68 @@
-<!doctype html>
 <!DOCTYPE html>
-<html lang="en" dir="ltr"> 
+<html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title>프론트엔 복습 페이지</title>
   </head>
   <body>
 
-    <h1> 학습한 것을 정리 </h1>
+    <h1> Front-End 학습한 것을 정리 </h1>
 
     <ul>
-      <ol> Text Editor - Atom
+      <ol> <h3>Text Editor - Atom</h3>
         <li> 팁 </li>
       </ol>
-      <br>
-      <ol>HTML
-        <li><a href="html1.html">html 배운 것 - 1 </a></li>
+      <hr>
+
+      <ol><h3>HTML</h3>
+        <li><a href="html1.html">Learn the Basics </a></li>
+        <li>Writing Semantic HTML</li>
+        <li><a href="basicSEO.html">SEO</a> </li>
+        <li>Accessibility</li>
+        <li></li>
       </ol>
-      <br>
-      <ol>SEO
-        <li><a href="seo1.html">SEO 배운 것 - 1</a> </li>
+      <hr>
+
+      <ol><h3>CSS</h3>
+        <li>Learn the Basics </li>
+        <li>Making Layouts  </li>
+          <table>
+            <td>Floats</td>
+            <td>Positioning</td>
+            <td>Display</td>
+            <td>Box Model</td>
+            <td>CSS Grid</td>
+            <td>Flex Box</td>
+          </table>
+        <li>Media Queries</li>
+        <li>Learn CSS3</li>
+        <li></li>
       </ol>
-      <br>
-      <ol>CSS
-        <li>html 배운것 - 1 </li>
+      <hr>
+
+      <ol><h3>JavaScript</h3>
+        <li>Syntax and Basic Constructs</li>
+        <li>Learn DOM Manipulation</li>
+        <li>Learn Fetch API / Ajax(XHR)</li>
+        <li>ES6+ and modular JavaScript</li>
+        <li>Understand the concepts</li>
+        <table>
+          <td>Hoisting</td>
+          <td>Event Bubbling</td>
+          <td>Scope</td>
+          <td>Prototype</td>
+          <td>Shadow DOM</td>
+          <td>strict</td>
+          <td>How browsers work</td>
+          <td>DNS</td>
+          <td>HTTP</td>
+        </table>
+        <li></li>
       </ol>
-      <br>
-      <ol>JavaScript
-        <li>html 배운것 - 1 </li>
+      <hr>
+
+      <ol><h3>Package Managers</h3>
+        <li></li>
       </ol>
     </ul>
 
