--- a/basicSEO.html
+++ b/basicSEO.html
@@ -2,12 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>HTML tags for SEOM</title>
+    <title>HTML tags for SEO</title>
   </head>
   <body>
 
-    <h1>HTML tags for SEOM</h1>
-    <a href="https://www.link-assistant.com/news/html-meta-tags-for-seo.html">SEO를 위한 7 HTML tags</a>
+    <h1>HTML tags for SEO</h1>
+    <a href="https://www.link-assistant.com/news/html-meta-tags-for-seo.html"><h3>SEO를 위한 7 HTML tags</h3></a>
 
     <ol>
       <h2>&lt;Head&gt; section</h2>
