--- a/index.html
+++ b/index.html
@@ -3,19 +3,51 @@
   <head>
     <meta charset="utf-8">
     <title>프론트엔 복습 페이지</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131752697-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-131752697-1');
+    </script>
+
+    <style>
+
+    table {
+      border-collapse: collapse;
+    }
+
+    table td{
+      border: 0px solid black;
+      padding:8px;
+
+    }
+    </style>
+
+
+
   </head>
   <body>
 
     <h1> Front-End 학습한 것을 정리 </h1>
-
     <ul>
-      <ol> <h3>Text Editor - Atom</h3>
-        <li> 팁 </li>
+      <li><h3>Learning method</h3></li>
+        <a href="learning.html">check out!</a>
+      <hr>
+
+      <ol> <h3>Tool</h3>
+        <li>Text Editor - Atom </li>
+        <li>Disqus(for comments)</li>
+        <li><a href="https://analytics.google.com">Analizing websites(google)</a></li>
+        <li></li>
       </ol>
       <hr>
 
       <ol><h3>HTML</h3>
-        <li><a href="html1.html">Learn the Basics </a></li>
+        <li><a href="htmlBasic.html">Learn the Basics </a></li>
         <li>Writing Semantic HTML</li>
         <li><a href="basicSEO.html">SEO</a> </li>
         <li>Accessibility</li>
@@ -24,7 +56,7 @@
       <hr>
 
       <ol><h3>CSS</h3>
-        <li>Learn the Basics </li>
+        <li><a href="cssBasic.html">Learn the Basics</a> </li>
         <li>Making Layouts  </li>
           <table>
             <td>Floats</td>
@@ -47,15 +79,19 @@
         <li>ES6+ and modular JavaScript</li>
         <li>Understand the concepts</li>
         <table>
-          <td>Hoisting</td>
-          <td>Event Bubbling</td>
-          <td>Scope</td>
-          <td>Prototype</td>
-          <td>Shadow DOM</td>
-          <td>strict</td>
-          <td>How browsers work</td>
-          <td>DNS</td>
-          <td>HTTP</td>
+          <tr>
+            <td>Hoisting</td>
+            <td>Event Bubbling</td>
+            <td>Scope</td>
+            <td>Prototype</td>
+            <td>Shadow DOM</td>
+          </tr>
+          <tr>
+            <td>strict</td>
+            <td>How browsers work</td>
+            <td>DNS</td>
+            <td>HTTP</td>
+          </tr>
         </table>
         <li></li>
       </ol>
@@ -64,8 +100,8 @@
       <ol><h3>Package Managers</h3>
         <li></li>
       </ol>
-    </ul>
 
+    </ul>
 
   </body>
 </html>
