--- a/learning.html
+++ b/learning.html
@@ -12,12 +12,13 @@
     </header>
 
     <article>
-      <h6>* 수 많은 삽질이 없다면 건물은 지어지지 않는다.(A Construction needs thousands of shoveling)</h6>
+      <h6>* 수 많은 삽질이 없다면 건물은 지어지지 않는다.(A Construction needs millions of shoveling)</h6>
 
       <ol>
         <li><h4> why / what / how </h4></li>
         <p>
           <ul>
+            <li>what if : 가설의 단계<li>
             <li>why: 왜 해야 하는가? 나를 설득시킨다.</li>
             <li>what: 무엇을 해야 하는가? 목차를 본다.</li>
             <li>how: 아래의 방법으로 한다.<li>
@@ -25,7 +26,7 @@
           </ul>
         </p>
 
-      <li><h4>목차를 암기.</h4></li>
+      <li><h4>structure</h4></li>
       <p>
         <ul>
         <li>목차를 읽고, 암기해 무엇을 공부할지에 대한 방향성 매핑</li>
@@ -34,21 +35,21 @@
         </ul>
       </p>
 
-      <li><h4>가장 쉬운 동영상을 보기</h4></li>
+      <li><h4>vocabulary and syntax</h4></li>
       <p>
         <ul>
-        <li>내가 무엇을 모르는가에 대해 확인</li>
+        <li>그 세계에서 이해되는 전문용어와 그 전문용어가 적용되는 상위 개념을 파악한다.</li>
         <li><a href="https://opentutorials.org/course/3083">opentutorials</a></li>
-        <li>주의: 맥락만 확인</li>
+        <li>주의: 대표적인 상위 개념만 익힌다.</li>
         </ul>
       </p>
 
-      <li><h4>쉬운 레퍼런스와 예제로 실습</h4></li>
+      <li><h4>modeling</h4></li>
       <p>
         <ul>
-        <li>레퍼런스와 예제로 만들고 정리</li>
-        <li><a href="https://www.w3schools.com/">w3schools</a></li>
-        <li>주의: 동영상에서 소개한 것만 하자 </li>
+        <li>현실 세계에 적용하기 전에, 먼저 작은 모형(models)에 적용해서 생각한다.</li>
+        <li><a href="modeling.html">모델링</a></li>
+        <li> </li>
         </ul>
       </p>
 
@@ -60,6 +61,17 @@
         <li>검색된 것을 읽어보고 레퍼런스에서 정확하게 습득</li>
         </ul>
       </p>
+
+
+      <li><h4>쉬운 레퍼런스와 예제로 기본기 익히기</h4></li>
+      <p>
+        <ul>
+        <li>레퍼런스와 예제로 만들고 정리</li>
+        <li><a href="https://www.w3schools.com/">w3schools</a></li>
+        <li>주의: 하찮은 것들(trivial)을 만들기</li>
+        </ul>
+      </p>
+
 
       <hr>
 
